; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_ni_dpm.c_ni_send_msg_to_smc_with_parameter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_ni_dpm.c_ni_send_msg_to_smc_with_parameter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@SMC_SCRATCH0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.radeon_device*, i32, i32)* @ni_send_msg_to_smc_with_parameter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ni_send_msg_to_smc_with_parameter(%struct.radeon_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @SMC_SCRATCH0, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @WREG32(i32 %7, i32 %8)
  %10 = load %struct.radeon_device*, %struct.radeon_device** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @rv770_send_msg_to_smc(%struct.radeon_device* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @WREG32(i32, i32) #1

declare dso_local i32 @rv770_send_msg_to_smc(%struct.radeon_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
